Sonar cloud smels fix